<resources>
    <string name="app_name">Embaralhado</string>

    <string name="play">Jogar</string>
    <string name="configurar">Configurar</string>
    <string name="scoreModel">scoreModel</string>
    <string name="edite_categorie">Editar Contextos</string>
    <string name="edit_word">Editar Palavras</string>
    <string name="image_score">image scoreModel</string>
    <string name="cancel_button_again">Cancel button again</string>
    <string name="exit">Sair</string>
    <string name="registered_categories">Contextos Cadastrados</string>
    <string name="sound_button">sound button</string>
    <string name="editar">Editar</string>
    <string name="finish"> Concluído</string>
    <string name="register_new_categorie">Cadastrar novo contexto</string>
    <string name="select_categorie">Selecione o contexto</string>
    <string name="registered_words">Palavras cadastradas</string>
    <string name="register_new_word">Cadastrar nova palavra</string>
    <string name="exit_app">Exit app</string>
    <string name="description_button_delete_item">Description: Button delete item</string>
    <string name="description_edite_categorie">Description: edite contextModel</string>
    <string name="about_app">\nEmbaralhado 1.0.0\n\nDesenvolvedor: Jéferson Silva\nEmail: jeferson.silva@dcx.ufpb.br\n\nProfessora Orientadora: Ayla Rebouças\nEmail: ayla@dcx.ufpb.br\n\nImagens do alfabeto: Sapann-Design - Freepik.com\nImagens de animais: Freepik de Flaticon.com\nImagens de circo: Freepik de Flaticon.com\nImagens de frutas: Freepick de Flaticon.com\nÍcone de configuração Madebyoliver de Flaticon.com\nMúsica: besond.com\n</string>
    <string name="privacy_policy">Política de Privacidade</string>
    <string name="about">Sobre</string>
    <string name="hint_edittext_insert_new_categorie">Digite o contexto aqui</string>
    <string name="hint_edittext_insert_new_word">Digite a palavra aqui.</string>
    <string name="access_camera_message">Por favor, permita o acesso à câmera.</string>
    <string name="camera_button">Câmera</string>
    <string name="galleria_button">Galeria</string>
    <string name="save_button">Salvar</string>
    <string name="digite_o_contexto_aqui">Digite o contexto aqui</string>
    <string name="new_image">image</string>
    <string name="congratulations">Parabéns!</string>
    <string name="trophy">troféu</string>
    <string name="level_number">level number</string>
    <string name="level_image">level_image</string>
    <string name="letter">letter</string>
    <string name="verify">verificar</string>
    <string name="reload">reload</string>
    <string name="logo">logo</string>
    <string name="wordModel">wordModel</string>
    <string name="image">image</string>
    <string name="remove_word_button">remove_word_button</string>
    <string name="settings">Configurações</string>
    <string name="scores">Pontuações</string>
</resources>
