<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="#004D40">

    <TextView
        android:id="@+id/congratulationsMessageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textSize="25sp"
        android:textColor="#ffffff"/>
    <ImageView
        android:id="@+id/congratulationsImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/trophy" />
    <TextView
        android:id="@+id/scoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreModel"
        android:textColor="#ffffff"
        android:textSize="18sp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/playAgain"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/play2"
                android:contentDescription="@string/image_score" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play"
                android:textColor="#ffffff"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/exitGame"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/exit"
                android:contentDescription="@string/cancel_button_again" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:textColor="#ffffff"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
